# mem_pool_allocator

./: .gitignore  CMakeLists.txt  README.md  allocator.cpp  allocator.h  build.sh  main.cpp  test.sh
benchmarks/: benchmark_allocator.cpp
include/: allocator.h  allocator_slab.h
src/: allocator.cpp  allocator_slab.cpp
tests/: test_allocator.cpp
